<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.funktio.erkki.ibanstash.MainActivity">

    <EditText android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_name" />

    <TextView android:id="@+id/name_validity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_not_ok"
        android:textColor="#ff0000" />

    <EditText android:id="@+id/field_iban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_iban"
        android:inputType="text" />

    <TextView android:id="@+id/iban_validity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iban_empty"
        android:textColor="#ff0000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="addEntry" />

    <TextView android:id="@+id/field_added_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_entry_added"/>

</LinearLayout>